upto_7 - login,signup token creation

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,8 @@
 PORT=4000
 MONGO_URI=mongodb+srv://kavindadissanayake1999:kavindapwd@cluster0.ephzu2y.mongodb.net/
+SECRET=kavindadissanayake1999SECRET
 
- parana Mongopwd:z6QWers9M7EopJq7
+parana Mongopwd:z6QWers9M7EopJq7
 
 mongodb+srv://kavindadissanayake1999:kavindapwd@cluster0.ephzu2y.mongodb.net/
 kavindapwd
